akv2k8s/akv2k8s-controller-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akv2k8s-controller
  namespace: akv2k8s
  labels:
    app.kubernetes.io/name: akv2k8s
    app.kubernetes.io/instance: akv2k8s
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: akv2k8s
      app.kubernetes.io/instance: akv2k8s
      app.kubernetes.io/component: akv2k8s-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: akv2k8s
        app.kubernetes.io/instance: akv2k8s
        app.kubernetes.io/component: akv2k8s-controller
    spec:
      serviceAccountName: akv2k8s-controller
      containers:
      - name: controller
        # see https://github.com/SparebankenVest/azure-key-vault-to-kubernetes for details about this image
        image: "spvest/azure-keyvault-controller:1.3.0"
        imagePullPolicy: IfNotPresent
        args:
          - "--cloudconfig=/etc/kubernetes/azure.json"
          - "--version=1.3.0"
          - "--v=2"
          - "--logging-format=text"
          - "--watch-all-namespaces=true"
        ports:
          - name: http
            containerPort: 9000
        securityContext:
          allowPrivilegeEscalation: true
        volumeMounts:
          - name: azure-config
            mountPath: "/etc/kubernetes/azure.json"
            readOnly: true
      volumes:
      - name: azure-config
        hostPath:
          path: "/etc/kubernetes/azure.json"
          type: File
