akv2k8s/akv2k8s-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: akv2k8s-controller
  namespace: akv2k8s
  labels:
    app.kubernetes.io/name: akv2k8s
    app.kubernetes.io/instance: akv2k8s
    app.kubernetes.io/component: akv2k8s-controller
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: akv2k8s
    app.kubernetes.io/instance: akv2k8s
    app.kubernetes.io/component: akv2k8s-controller
