akv2k8s/akv2k8s-envinjector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: akv2k8s-envinjector
  namespace: akv2k8s
  labels:
    app.kubernetes.io/name: akv2k8s
    app.kubernetes.io/instance: akv2k8s
    app.kubernetes.io/component: akv2k8s-webhook
spec:
  type: ClusterIP
  ports:
    - name: webhook-tls
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: auth-tls
      port: 9443
      targetPort: 9443
      protocol: TCP
  selector:
    app.kubernetes.io/name: akv2k8s
    app.kubernetes.io/instance: akv2k8s
    app.kubernetes.io/component: akv2k8s-webhook
