akv2k8s/akv2k8s-envinjector-mwhc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: akv2k8s-envinjector
  namespace: default
  labels:
    app.kubernetes.io/name: akv2k8s
    app.kubernetes.io/instance: akv2k8s
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: akv2k8s-2.1.0
webhooks:
- name: pods.env-injector.admission.spv.no
  admissionReviewVersions: ["v1beta1"]
  clientConfig:
    service:
      namespace: default
      name: akv2k8s-envinjector
      path: /pods
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQUtkaXhmdGFSRmtKWGpod2I1amZ1SzB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TVRBNE1UTXhORFV6TURaYUZ3MHpNVEE0TVRFeApORFV6TURaYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNyaGhzK1ByTW9rT3oxYVBoMWpQaHJLbkRKbUE2UFlFWlpOd0lMRmo5dlVEMDMKMXJsWnRYTUpaclFqaU5JdVdFTk1JRVdpT2VtTnZnRkNJa2ZPZ1lMUEZzdk1QK1dnL3E1QkxWSnBXenRmMThJZwp6S0QyaTRHd21OSW [...]
  rules:
  - operations:
    - CREATE
    apiGroups:
    - "*"
    apiVersions:
    - "*"
    resources:
    - pods
  failurePolicy: Fail
  namespaceSelector:
    matchLabels:
      azure-key-vault-env-injection: enabled
    matchExpressions:

    - key: name
      operator: NotIn
      values:
      - kube-system
    - key: name
      operator: NotIn
      values:
      - default
  sideEffects: NoneOnDryRun
